fix dumb scrollbar

--- a/src/Repl.module.css
+++ b/src/Repl.module.css
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: row;
     justify-content: stretch;
-    overflow: auto;
+    overflow: hidden;
     font-size: 0.875rem;
     line-height: 1.25rem;
 }
